added oauth and pug
